M360_Sprint_02a_V1.3_2/objects/ABIQ_RouteAssortment__c.object
<CustomObject>
    <description>To summarize assortment data at Route level for historical reporting purposes.</description>
    <fields>
        <fullName>Brand_Category__c</fullName>
        <label>Brand Category</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Compliant__c</fullName>
        <label>Compliant</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <description>M360 Purpose</description>
        <externalId>true</externalId>
        <label>ExternalId</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <label>Month</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Non_Compliant__c</fullName>
        <label>Non Compliant</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Route__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Route</label>
        <referenceTo>Route__c</referenceTo>
        <relationshipLabel>ABIQ_RouteAssortments</relationshipLabel>
        <relationshipName>ABIQ_RouteAssortments</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>ABIQ RouteAssortment</label>
    <nameField>
        <label>ABIQ RouteAssortment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ABIQ_RouteAssortments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>